@@ -9,7 +9,6 @@ FIXME when found
 TODO
   мелкие улучшения
   средний функционал
-    восстанавливать позицию в файле
   большой функционал
     Вставляя текст - выравнивать его
     Открыватор файлов с tab completion
