@@ -1,3 +1,6 @@
+Sun Mar 25 2012
+    Restore position in the file when repopening it
+
 Thu Mar 23 2012
     Restore session
 
